--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="/images/favicon.png">
+    <!-- We need to load our style first than the JavaScript file bundle.js-->
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Expensify</title>
 </head>
 <body>
