--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- We need to load our style first than the JavaScript file bundle.js-->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
     <title>Expensify</title>
 </head>
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
